[package]
name = "jstprove-remainder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
frontend = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "06a5f406" }
remainder = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "06a5f406" }
shared-types = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "06a5f406" }
ligero = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "06a5f406" }
hyrax = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "06a5f406" }

prost = "0.13"
ndarray = { version = "0.15.6", features = ["serde"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
jstprove-io = { path = "../jstprove_io" }
rmpv = { version = "1", features = ["with-serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
itertools = "0.14"

[build-dependencies]
prost-build = "0.13"

[features]
parallel = [
    "frontend/parallel",
    "remainder/parallel",
]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
bincode = "1.3"
rmp-serde = "1.3"
tempfile = "3"

[[bin]]
name = "jstprove-remainder"
path = "src/main.rs"

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "pipeline"
harness = false
