[package]
name = "jstprove-remainder"
description = "Remainder proof backend for JSTprove zero-knowledge proofs"
version = "0.1.0"
edition = "2021"
authors = ["Inference Labs Inc"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/inference-labs-inc/JSTprove"

[dependencies]
frontend = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "06a5f406" }
remainder = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "06a5f406" }
shared-types = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "06a5f406" }
ligero = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "06a5f406" }
hyrax = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "06a5f406" }

jstprove-onnx = { path = "../jstprove_onnx" }
ndarray = { version = "0.15.6", features = ["serde"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
jstprove-io = { path = "../jstprove_io" }
rmpv = { version = "1", features = ["with-serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
itertools = "0.14"
console.workspace = true
indicatif = "0.18"
serde_json.workspace = true

[features]
parallel = [
    "frontend/parallel",
    "remainder/parallel",
]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rmp-serde = "1.3"
tempfile = "3"

[[bin]]
name = "jstprove-remainder"
path = "src/main.rs"

[[bench]]
name = "pipeline_remainder"
harness = false
